--- a/src-ui/windows/config_window/setting_section/setting_box/about_vrct/poster_showcase_contents/poster_showcase_worlds_contents/PosterShowcaseWorldsContents.module.scss
+++ b/src-ui/windows/config_window/setting_section/setting_box/about_vrct/poster_showcase_contents/poster_showcase_worlds_contents/PosterShowcaseWorldsContents.module.scss
@@ -41,7 +41,7 @@ $image_height_gap: 0.4rem;
     margin: 0 2.6rem;
 }
 
-$animation_duration: .15s;
+$animation_duration: .1s;
 .pagination_box {
     width: 100%;
     cursor: pointer;
@@ -62,6 +62,9 @@ $animation_duration: .15s;
         &.is_active .pagination_chato_img {
             animation: tremble_animation $animation_duration ease-out;
         }
+        & .pagination_num {
+            color: var(--dark_400_color);
+        }
     }
 }
 
@@ -75,7 +78,7 @@ $animation_duration: .15s;
 .indicator {
     width: 100%;
     height: 0.2rem;
-    background-color: var(--dark_800_color);
+    background-color: var(--dark_825_color);
     &.is_active {
         background-color: var(--primary_400_color);
     }
