--- a/src-ui/windows/config_window/setting_section/setting_box/components/label_component/LabelComponent.module.scss
+++ b/src-ui/windows/config_window/setting_section/setting_box/components/label_component/LabelComponent.module.scss
@@ -1,3 +1,17 @@
 .label_component {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
 
+.label {
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: var(--dark_basic_text_color);
+}
+
+.desc {
+    font-size: 1.4rem;
+    font-weight: 300;
+    color: var(--dark_500_color);
 }
