--- a/src-ui/windows/config_window/setting_section/SettingSection.module.scss
+++ b/src-ui/windows/config_window/setting_section/SettingSection.module.scss
@@ -1,10 +1,9 @@
 .scroll_container {
     width: 100%;
-    margin-left: 4rem;
     overflow-y: auto;
     overflow-x: hidden;
 }
 
 .container {
-    margin: 4rem;
+    margin: 6rem 4rem 16rem 3.2rem;
 }
