--- a/src-ui/windows/config_window/setting_section/setting_box/components/deepl_auth_key/DeeplAuthKey.module.scss
+++ b/src-ui/windows/config_window/setting_section/setting_box/components/deepl_auth_key/DeeplAuthKey.module.scss
@@ -47,6 +47,8 @@
     color: var(--dark_basic_text_color);
     font-size: 1.4rem;
     border-radius: 0.4rem;
+    text-align: center;
+    flex-shrink: 0;
     &:hover {
         background-color: var(--primary_500_color);
     }
