[Update/bugfix] Config Window: WordFilter. Add toggle button that can open and close the word filter list. And Add the text that the word filter list's length. fix the error, input_value undefined but do split function.

--- a/src-ui/windows/config_window/setting_section/setting_box/components/word_filter/WordFilter.module.scss
+++ b/src-ui/windows/config_window/setting_section/setting_box/components/word_filter/WordFilter.module.scss
@@ -89,3 +89,37 @@
         background-color: var(--primary_700_color);
     }
 }
+
+
+
+.toggle_button_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.words_count_text {
+    font-size: 1.6rem;
+}
+
+.toggle_button_wrapper {
+    padding: 1.6rem;
+    border-radius: 0.4rem;
+    &:hover {
+        background-color: var(--dark_825_color);
+    }
+    &:active {
+        background-color: var(--dark_900_color);
+    }
+}
+
+.arrow_left_svg {
+    width: 2.4rem;
+    &.to_down {
+        transform: rotate(-90deg);
+    }
+    &.to_up {
+        transform: rotate(90deg);
+    }
+}
