--- a/src-ui/windows/config_window/setting_section/setting_box/components/useSettingBox.module.scss
+++ b/src-ui/windows/config_window/setting_section/setting_box/components/useSettingBox.module.scss
@@ -52,3 +52,26 @@
 .message_format_section {
     width: 100%;
 }
+
+
+.word_filter_container {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    background-color: var(--dark_888_color);
+    padding: 2rem;
+}
+
+.word_filter_switch_section {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.word_filter_label_wrapper {
+    max-width: 34rem;
+}
