--- a/src-ui/windows/config_window/ConfigWindow.module.scss
+++ b/src-ui/windows/config_window/ConfigWindow.module.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     background-color: var(--dark_950_color);
     overflow: hidden;
+    position: relative;
 }
 
 .main_container {
@@ -13,4 +14,11 @@
     height: 100%;
     display: flex;
     padding-top: var(--config_window_topbar_height);
+}
+
+.software_version {
+    position: absolute;
+    bottom: 0.8rem;
+    left: 1.2rem;
+    font-size: 1.4rem;
 }
