[Update] Config Page: Add Device tab. add mic host list.(not selectable yet.)

--- a/src-ui/app/config_page/setting_section/setting_box/components/useSettingBox.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/useSettingBox.module.scss
@@ -26,6 +26,7 @@
     align-items: center;
     gap: 2rem;
     padding: 2rem;
+    border-bottom: solid 0.1rem var(--dark_800_color);
 }
 
 .threshold_switch_section {
