[Update/WIP] Config Page: Device Tab. 音量チェックができるように(Dev)

--- a/src-ui/app/config_page/setting_section/setting_box/components/threshold_component/slider_and_meter/SliderAndMeter.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/threshold_component/slider_and_meter/SliderAndMeter.module.scss
@@ -54,16 +54,6 @@
     }
 }
 
-.volume_info, .threshold_info {
-    font-size: 1.2rem;
-}
-
-
-
-
-
-
-
 
 
 
@@ -73,4 +63,22 @@
     top: -4rem;
     display: flex;
     gap: 2rem
+}
+
+
+
+.volume_info, .threshold_info {
+    font-size: 1.2rem;
+}
+
+
+
+.volume_check_button {
+    font-size: 1.4rem;
+    background-color: var(--dark_800_color);
+    padding: 1rem;
+    cursor: pointer;
+    &:hover {
+        background-color: var(--dark_775_color);
+    }
 }
