--- a/src-ui/app/config_page/setting_section/setting_box/components/radio_button/RadioButton.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/radio_button/RadioButton.module.scss
@@ -1,3 +1,5 @@
+@import "@scss_mixins";
+
 .container {
     display: flex;
     flex-direction: column;
@@ -12,6 +14,7 @@
     gap: 1rem;
     padding: 0.6rem 0.8rem;
     border-radius: 0.4rem;
+    position: relative;
     &:hover {
         background-color: var(--dark_800_color);
     }
@@ -38,4 +41,8 @@ input[type="radio"] {
 .radio_button_label {
     font-size: 1.4rem;
     font-weight: 300;
+}
+
+.loader {
+    @include loader(2rem, 0.2rem, left, -1.6rem);
 }
