--- a/src-ui/app/main_page/sidebar_section/SidebarSection.module.scss
+++ b/src-ui/app/main_page/sidebar_section/SidebarSection.module.scss
@@ -1,24 +1,3 @@
-.scroll_container {
-    width: calc(100% + 0.8rem);
-    overflow-y: scroll;
-    overflow-x: hidden;
-    margin-bottom: calc(2rem + 1.6rem + 2rem); // config button's sizes (svg + padding + margin).
-
-    &::-webkit-scrollbar {
-        width: 0.8rem;
-    }
-    &::-webkit-scrollbar-track {
-        background-color: var(--dark_888_color);
-        border-radius: 0.4rem;
-    }
-    &::-webkit-scrollbar-thumb {
-        background-color: var(--dark_800_color);
-        border-radius: 0.4rem;
-    }
-
-
-}
-
 .container {
     position: relative;
     min-width: 23rem;
@@ -29,4 +8,36 @@
     &.is_compact_mode {
         min-width: auto;
     }
+}
+
+
+.scroll_container {
+    width: calc(100% + 0.8rem);
+    overflow-y: overlay;
+    overflow-x: hidden;
+    margin-bottom: calc(2rem + 1.6rem + 2rem); // config button's sizes (svg + padding + margin).
+    pointer-events: auto;
+    z-index: 1;
+    &::-webkit-scrollbar {
+        width: 0.8rem;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: var(--dark_888_color);
+        border-radius: 0.4rem;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--dark_888_color);
+        border-radius: 0.4rem;
+    }
+
+    &:hover {
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--dark_800_color);
+        }
+    }
+
+    &.is_compact_mode {
+        width: 100%;
+    }
+
 }
