--- a/src-ui/app/main_page/sidebar_section/SidebarSection.module.scss
+++ b/src-ui/app/main_page/sidebar_section/SidebarSection.module.scss
@@ -7,13 +7,16 @@
     background-color: var(--dark_850_color);
     &.is_compact_mode {
         min-width: auto;
+        .scroll_container {
+            overflow-y: hidden;
+            width: auto;
+        }
     }
 }
 
-
 .scroll_container {
     width: calc(100% + 0.8rem);
-    overflow-y: overlay;
+    overflow-y: scroll;
     overflow-x: hidden;
     margin-bottom: calc(2rem + 1.6rem + 2rem); // config button's sizes (svg + padding + margin).
     pointer-events: auto;
@@ -35,9 +38,4 @@
             background-color: var(--dark_800_color);
         }
     }
-
-    &.is_compact_mode {
-        width: 100%;
-    }
-
 }
