[Update/bugfix] Config Page: Device Tab. Mic host/device section. Put together mic host and device settings in one section. Fix dropdown menu contents width and position. and add padding right for preventing text to cover svg arrow.

--- a/src-ui/app/config_page/setting_section/setting_box/components/dropdown_menu/DropdownMenu.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/dropdown_menu/DropdownMenu.module.scss
@@ -24,14 +24,16 @@
 
 .dropdown_selected_text {
     font-size: 1.4rem;
+    padding-right: 2.8rem;
 }
 
 .dropdown_content_wrapper {
     display: none;
     position: absolute;
     top: 100%; // Position it below the toggle button
-    left: 0;
+    right: 0;
     width: 100%;
+    min-width: 20rem;
     z-index: 1;
     &.is_opened {
         display: block;
