--- a/src-ui/app/config_page/setting_section/setting_box/device/Device.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/device/Device.module.scss
@@ -1,11 +1,30 @@
+.mic_container {
+    display: flex;
+    flex-direction: column;
+    border-bottom: solid 0.1rem var(--dark_800_color);
+    padding-bottom: 2rem;
+}
+
+.speaker_container {
+    padding-top: 2rem;
+}
+
 .device_container {
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
-    justify-content: space-between;
-    align-items: center;
+    margin-bottom: 0rem;
+}
+
+.threshold_container {
+    padding: 2rem;
+}
+
+.device_label {
+    font-size: 1.8rem;
+    color: var(--dark_basic_text_color);
 }
 
 .device_contents {
@@ -16,9 +35,11 @@
 .device_dropdown_wrapper {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.6rem;
 }
 
 .device_dropdown_label {
+    padding-left: 0.2rem;
     font-size: 1.4rem;
+    color: var(--dark_500_color);
 }
