[Update] Config Page: Device Tab. Add dynamic energy threshold functionally and sync slider and entry component.

--- a/src-ui/app/config_page/setting_section/setting_box/components/threshold_component/threshold_entry/ThresholdEntry.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/threshold_component/threshold_entry/ThresholdEntry.module.scss
@@ -15,4 +15,9 @@
     height: 100%;
     font-size: 1.4rem;
     resize: none;
+    color: var(--dark_basic_text_color);
+    &.is_disable {
+        color: var(--dark_500_color);
+        pointer-events: none;
+    }
 }
