--- a/src-ui/app/config_page/setting_section/setting_box/components/switchbox/Switchbox.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/switchbox/Switchbox.module.scss
@@ -15,6 +15,9 @@
     cursor: pointer;
     padding: 2rem;
     height: 100%;
+    &.is_loading {
+        pointer-events: none;
+    }
 }
 
 .toggle_control {
@@ -22,4 +25,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.loader {
+    @include loader(2rem, 0.2rem, right, -4rem);
 }
