--- a/src-ui/app/config_page/setting_section/setting_box/components/useSettingBox.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/useSettingBox.module.scss
@@ -17,25 +17,25 @@
     width: 100%;
 }
 
-.threshold_container {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
-}
+// .threshold_container {
+//     display: flex;
+//     width: 100%;
+//     flex-direction: column;
+//     justify-content: space-between;
+//     align-items: center;
+//     gap: 2rem;
+// }
 
-.threshold_switch_section {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
+// .threshold_switch_section {
+//     display: flex;
+//     width: 100%;
+//     justify-content: space-between;
+//     align-items: center;
+// }
 
-.threshold_section {
-    width: 100%;
-}
+// .threshold_section {
+//     width: 100%;
+// }
 
 .deepl_auth_key_label_section {
     max-width: 34rem;
