--- a/src-ui/utils/mixins.scss
+++ b/src-ui/utils/mixins.scss
@@ -76,6 +76,9 @@ $toggle_control_size: $toggle_height - calc($toggle_gutter * 2);
             background: $toggle_control_color;
             transition: left $toggle_control_speed $toggle_control_ease;
         }
+        &.is_loading:after{
+            background-color: var(--dark_600_color);
+        }
         &.is_hovered {
             background-color: var(--dark_725_color);
         }
