--- a/src-ui/utils/variables.css
+++ b/src-ui/utils/variables.css
@@ -26,6 +26,7 @@
     --dark_400_color: #c7c8cc;
     --dark_450_color: #b8b9bd;
     --dark_500_color: #a9aaae;
+    --dark_550_color: #949599;
     --dark_600_color: #7f8084;
     --dark_650_color: #75767a;
     --dark_700_color: #6a6c6f;
