[Update/bugfix] Config Page: Device Tab. Adjust design and fix styles.

--- a/src-ui/app/config_page/setting_section/setting_box/components/dropdown_menu/DropdownMenu.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/dropdown_menu/DropdownMenu.module.scss
@@ -31,6 +31,8 @@
 .dropdown_selected_text {
     font-size: 1.4rem;
     padding-right: 2.8rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .dropdown_content_wrapper {
