--- a/src-ui/app/config_page/setting_section/setting_box/components/switchbox/Switchbox.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/switchbox/Switchbox.module.scss
@@ -15,6 +15,7 @@
     cursor: pointer;
     padding: 2rem;
     height: 100%;
+    flex-shrink: 0;
     &.is_loading {
         pointer-events: none;
     }
