--- a/src-ui/app/config_page/setting_section/setting_box/device/Device.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/device/Device.module.scss
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: column;
     border-bottom: solid 0.1rem var(--dark_800_color);
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
 }
 
 .speaker_container {
-    padding-top: 2rem;
+    padding-top: 0rem;
 }
 
 .device_container {
@@ -38,6 +38,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    flex-shrink: 0;
 }
 
 .threshold_section {
@@ -54,7 +55,10 @@
 
 .device_contents {
     display: flex;
-    gap: 2.8rem;
+    width: 100%;
+    justify-content: end;
+    padding-left: 2rem;
+    gap: 2rem;
 }
 
 .device_auto_select_wrapper {
@@ -65,9 +69,16 @@
 
 .device_dropdown_wrapper {
     display: flex;
+    flex-direction: row;
+    gap: 2.8rem;
+}
+
+.device_dropdown {
+    display: flex;
     flex-direction: column;
     gap: 0.6rem;
     white-space: nowrap;
+    max-width: 24rem;
     &.is_disabled {
         pointer-events: none;
     }
@@ -77,4 +88,5 @@
     padding-left: 0.2rem;
     font-size: 1.4rem;
     color: var(--dark_500_color);
+    white-space: nowrap;
 }
