[Update] Config Page: Appearance Tab. UI Language. Show localization language and 'UI Language' when it's not en to desc section. Add padding more between label and desc.

--- a/src-ui/app/config_page/setting_section/setting_box/appearance/Appearance.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/appearance/Appearance.module.scss
@@ -14,8 +14,13 @@
     gap: 1rem;
     position: relative;
 }
-
-
+.ui_language_label_wrapper {
+    display: flex;
+    align-items: center;
+}
+.ui_language_secondly_label {
+    font-size: 1.2rem;
+}
 
 .radio_button_wrapper {
     display: flex;
