[Rename] is_loading to is_pending.

--- a/src-ui/app/config_page/setting_section/setting_box/components/switchbox/Switchbox.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/switchbox/Switchbox.module.scss
@@ -16,7 +16,7 @@
     padding: 2rem;
     height: 100%;
     flex-shrink: 0;
-    &.is_loading {
+    &.is_pending {
         pointer-events: none;
     }
 }
