--- a/src-ui/app/config_page/setting_section/setting_box/components/dropdown_menu/DropdownMenu.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/dropdown_menu/DropdownMenu.module.scss
@@ -17,7 +17,7 @@
     &:active {
         background-color: var(--dark_975_color);
     }
-    &.is_loading {
+    &.is_pending {
         pointer-events: none;
     }
     &.is_disabled {
