--- a/src-ui/app/config_page/setting_section/setting_box/components/threshold_component/volume_check_button/VolumeCheckButton.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/threshold_component/volume_check_button/VolumeCheckButton.module.scss
@@ -17,7 +17,7 @@
             background-color: var(--primary_550_color);
         }
     }
-    &.is_loading {
+    &.is_pending {
         background-color: var(--dark_850_color);
         pointer-events: none;
         .button_svg, .button_text {
