[Update] Main Page: Message Log. the texts to be selectable.

--- a/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
+++ b/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
@@ -62,9 +62,11 @@
 .message_main {
     color: var(--dark_basic_text_color);
     font-size: 1.4rem;
+    user-select: text;
 }
 
 .message_second {
     color: var(--dark_450_color);
     font-size: 1rem;
+    user-select: text;
 }
