[Update] Main Page: Message Input Box Ratio. saveable the ratio.

--- a/src-ui/app/main_page/main_section/message_container/MessageContainer.module.scss
+++ b/src-ui/app/main_page/main_section/message_container/MessageContainer.module.scss
@@ -6,6 +6,11 @@
     padding: 0 1.6rem 1rem 1.6rem;
 }
 
+.log_box_resize_wrapper {
+    flex: 1;
+    overflow: auto;
+}
+
 .separator {
     position: relative;
     width: 100%;
