--- a/src-ui/app/config_page/setting_section/setting_box/components/slider/Slider.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/slider/Slider.module.scss
@@ -4,8 +4,9 @@
     align-items: end;
     justify-content: center;
     width: 100%;
+    padding-left: 4rem;
 }
 
 .range_slider {
-    max-width: 40rem;
+    // max-width: 60rem;
 }
