--- a/src-ui/app/main_page/main_section/message_container/log_box/LogBox.module.scss
+++ b/src-ui/app/main_page/main_section/message_container/log_box/LogBox.module.scss
@@ -6,8 +6,5 @@
     overflow: auto;
     border-radius: 0.8rem;
     padding: 1rem;
-}
-
-.text {
-    overflow-wrap: break-word;
+    font-size: 1rem; // This is the standard font size for message logs, and is controlled by JavaScript. All child elements this are generally expressed in "em" and are affected by the font size setting here.
 }
