[Update] Config Page: DropdownMenu: Add max hight and scrollable.

--- a/src-ui/app/config_page/setting_section/setting_box/components/dropdown_menu/DropdownMenu.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/components/dropdown_menu/DropdownMenu.module.scss
@@ -60,6 +60,8 @@
     flex-direction: column;
     gap: 0.1rem;
     white-space: nowrap;
+    max-height: 20rem;
+    overflow-y: scroll;
 }
 
 .value_button {
