--- a/src-ui/utils/root.css
+++ b/src-ui/utils/root.css
@@ -24,6 +24,7 @@
 
 html, body {
     height: 100%;
+    font-family: "Yu Gothic UI"; /* If not found the font family where 'root:' that is selected by user*/
 }
 
 
