[Update] Add Window Title bar. [bugfix] Note: I think this is tauri's bug. When I try to resize the window and hovered dragable area, I could see resize cursor but it work as a dragging the window behavior that should't be. Updated npm packages but still not work so I  managed it as adding margin-top by referring Discord title bar.

--- a/src-ui/utils/root.css
+++ b/src-ui/utils/root.css
@@ -25,6 +25,7 @@
 html, body {
     height: 100%;
     font-family: "Yu Gothic UI"; /* If not found the font family where 'root:' that is selected by user*/
+    border-radius: 1.8rem;
 }
 
 
