--- a/src-ui/app/App.module.scss
+++ b/src-ui/app/App.module.scss
@@ -1,6 +1,16 @@
 .container {
+    // position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.pages_wrapper {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
 }
