--- a/src-ui/app/config_page/topbar/Topbar.module.scss
+++ b/src-ui/app/config_page/topbar/Topbar.module.scss
@@ -1,15 +1,18 @@
 .container {
     width: 100%;
     height: 0%;
-    transition: transform 0.5s ease;
+    transition: top 0.5s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .show_config.container {
-    transform: translateY(0vh);
+    top: 0;
 }
 
 .show_main.container {
-    transform: translateY(100vh);
+    top: 100%;
 }
 
 
