[bugfix] Main Page: Message Box Ratio. store the data in float and fix the bug that was set bit off message box's height.

--- a/src-ui/app/window_title_bar/WindowTitleBar.module.scss
+++ b/src-ui/app/window_title_bar/WindowTitleBar.module.scss
@@ -11,7 +11,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    height: 2rem;
+    height: var(--title_bar_height);
     margin-top: 0.4rem;
 }
 
