--- a/src-ui/utils/variables.css
+++ b/src-ui/utils/variables.css
@@ -46,6 +46,7 @@
     --dark_1000_color: #151517;
 
 
+    --title_bar_height: 2rem;
     --main_page_topbar_height: 4.8rem;
     --config_page_sidebar_width: 18rem;
     --config_page_topbar_height: 8rem;
