--- a/src-ui/app/config_page/setting_section/setting_box/_components/radio_button/RadioButton.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/_components/radio_button/RadioButton.module.scss
@@ -23,12 +23,12 @@
     }
 }
 
-input[type="radio"] {
+.radio_button_input {
     appearance: none;
     margin: 0;
-    width: 2.4rem;
-    height: 2.4rem;
-    border: 0.3rem solid var(--dark_600_color);
+    width: 2rem;
+    height: 2rem;
+    border: 0.2rem solid var(--dark_600_color);
     border-radius: 50%;
     transition: border-color .1s ease, border-width .1s ease;
     cursor: inherit;
