--- a/src-ui/app/config_page/setting_section/setting_box/_components/slider/Slider.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/_components/slider/Slider.module.scss
@@ -4,7 +4,7 @@
     align-items: center; // 中央に揃え
     justify-content: center;
     width: 100%;
-    padding-left: 4rem;
+    // padding-left: 4rem;
 }
 
 .range_slider {
