--- a/src-ui/app/config_page/setting_section/setting_box/vr/Vr.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/vr/Vr.module.scss
@@ -8,6 +8,7 @@
 }
 
 .controller_type_switch {
+    margin-top: 6rem;
     display: flex;
     border: 0.1rem solid var(--dark_600_color);
     border-radius: 0.4rem;
@@ -35,11 +36,11 @@
 }
 
 .position_rotation_controls_box {
-    margin-top: 14rem;
+    margin-top: 8rem;
     position: relative;
     aspect-ratio: 1 / 1;
     width: 36%;
-    max-width: 40rem;
+    max-width: 36rem;
     transform: translate(-10%);
 }
 
@@ -153,8 +154,40 @@
 
 
 
+.common_controls {
+    padding-top: 4rem;
+    padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    width: 100%;
+    max-width: 56rem;
+    border-bottom: 0.1rem solid var(--dark_700_color);
+}
+
+.common_controls_wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    position: relative;
+}
+.common_controls_slider {
+    margin-left: 18rem;
+}
+
+.common_controls_slider_label {
+    position: absolute;
+    font-size: 1.6rem;
+    width: 100%;
+}
+
+
+
 .other_controls {
-    margin-top: 10rem;
+    margin-top: 6rem;
     display: flex;
     flex-direction: column;
     align-items: center;
