--- a/src-ui/app/config_page/setting_section/setting_box/others/Others.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/others/Others.module.scss
@@ -1,5 +1,11 @@
 .container {
     display: flex;
+    gap: 6.4rem;
+    flex-direction: column;
+}
+
+.auto_export_message_logs_container {
+    display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -12,7 +18,7 @@
     border-bottom: solid 0.1rem var(--dark_800_color);
 }
 
-.switch_section_container {
+.auto_export_message_logs_switch_section_container {
     display: flex;
     width: 100%;
     justify-content: space-between;
