--- a/src-ui/app/App.module.scss
+++ b/src-ui/app/App.module.scss
@@ -1,10 +1,12 @@
 .container {
-    // position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    background-color: var(--dark_888_color);
+    align-items: center;
 }
 
 
