--- a/src-ui/app/_index_css/variables.css
+++ b/src-ui/app/_index_css/variables.css
@@ -50,4 +50,6 @@
     --main_page_topbar_height: 4.8rem;
     --config_page_sidebar_width: 18rem;
     --config_page_topbar_height: 8rem;
+
+    --font_family: "Yu Gothic UI";
 }
