--- a/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
+++ b/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     user-select: text;
     gap: 0.6rem;
-    &.sent_message:hover {
+    &.sent_message.is_shown_resend_button:hover {
         background-color: var(--dark_950_color);
     }
 }
