[Update] Add update software UI(modal).

--- a/src-ui/app/_index_css/variables.css
+++ b/src-ui/app/_index_css/variables.css
@@ -8,6 +8,7 @@
     --primary_400_color: #48a495;
     --primary_450_color: #429c8c;
     --primary_500_color: #3b9483;
+    --primary_550_color: #398E7D;
     --primary_600_color: #368777;
     --primary_650_color: #347f6f;
     --primary_700_color: #317767;
