[Update/Refactor] UI: Slider component. Adjust color and code.

--- a/src-ui/app/_index_css/variables.css
+++ b/src-ui/app/_index_css/variables.css
@@ -16,6 +16,8 @@
     --primary_800_color: #2c6759;
     --primary_900_color: #214b3f;
 
+    --primary_600_color_44: #36877744;
+
     --sent_400_color: #6197b4;
     --received_300_color: #a861b4;
 
