[Update] Config Page: Add break point and change the design layout.(UI Scaling will apply)

--- a/src-ui/app/config_page/setting_section/setting_box/_templates/Templates.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/_templates/Templates.module.scss
@@ -9,6 +9,12 @@
         flex-direction: column;
     }
     border-bottom: solid 0.1rem var(--dark_800_color);
+
+    &.is_break_point {
+        flex-direction: column;
+        gap: 2rem;
+        align-items: start;
+    }
 }
 
 .label_only_section {
