[Chore] Config Page: Adjust design a bit.

--- a/src-ui/app/config_page/setting_section/setting_box/_components/radio_button/RadioButton.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/_components/radio_button/RadioButton.module.scss
@@ -5,6 +5,7 @@
     gap: 0.4rem;
     position: relative;
     flex-shrink: 0;
+    flex-wrap: wrap;
     &.column {
         flex-direction: column;
     }
