--- a/src-ui/app/main_page/sidebar_section/language_settings/LanguageSettings.module.scss
+++ b/src-ui/app/main_page/sidebar_section/language_settings/LanguageSettings.module.scss
@@ -19,3 +19,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+.target_language_containers {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.2rem;
+}
